Fix issue of border-radius on iOS devices

--- a/src/components/dialog.css
+++ b/src/components/dialog.css
@@ -81,9 +81,5 @@
     left: 0 !important;
     right: 0 !important;
     margin-left: 0 !important;
-    border-top-left-radius: 8px !important;
-    border-top-right-radius: 8px !important;
-    box-shadow:
-        rgba(60, 64, 67, .3) 0 1px 1px, rgba(60, 64, 67, .15) 0 1px 4px 1px !important;
   }
 }
